--- a/index.html
+++ b/index.html
@@ -2156,8 +2156,7 @@
           width: 400px;
           height: 176.991px;
         }
-
-        #IMAGE341 {
+        x #IMAGE341 {
           top: 197px;
           left: 10px;
         }
@@ -2279,6 +2278,11 @@
         background-image: none !important;
       }
     </style>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/logos/logo1-removebg-preview.png"
+    />
   </head>
 
   <body class="lazyload">
@@ -2287,8 +2291,8 @@
         <div class="ladi-section-background"></div>
         <div class="ladi-container">
           <img
-            src="assets/img/logo/logo-vangiaphat-w360.png"
-            style="width: 15%; margin-top: 1rem"
+            src="images/logos/logo1-removebg-preview.png"
+            style="width: 20%; margin-top: 1rem"
             title="Van Gogh, Self-portrait."
           />
           <div id="GROUP325" class="ladi-element">
