--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       property="og:url"
       content="http://preview.ldp.page/65811e1507886c001263465f"
     />
-    <meta property="og:title" content="Bất động sản 16" />
+    <meta property="og:title" content="Nhà Phố Lavela" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
